===================================
imGlossary v1.03
===================================
- Upgraded for ImpressionCMS 1.3

Added:
- About page
- IPF classes and tables to admin index page
- CSS styling to the letters (top)

Removed:
- support for Koivi editor

Files removed:
- xoops_version.php
- admin/admin.php
- admin/category.php
- admin/entry.php
- admin/myblockform.php
- admin/myblocksadmin.php
- admin/myblocksadmin.txt
- admin/mygroupperm.php
- admin/mygrouppermform.php
- include/blocksadmin.inc.php
- include/gtickets.php
- include/updateblock.inc.php
- include/onupdate.inc.php
- sql/index.html
- sql/imglossary.sql


===================================
imGlossary v1.02
===================================
- Added: Persian translation [stranger]
- Added: ImpressCMS global directions [stranger]
- Added: URL for Submit Bug to Trac in About page [mcdonald]

- Fixed: html always set when linked terms selected [mcdonald]
- Fixed: block settings were not saved [mcdonald]
- Fixed: unable to delete category [mcdonald]
- Fixed: terms were deleted when category was deleted [mcdonald]
- Fixed: preventing setting terms online and not visible in entries block [mcdonald]
- Fixed: page navigation in 'Other' [mcdonald]
- Fixed: date was set to current when editing entry [mcdonald]


===================================
imGlossary v1.01
===================================
- Added: RSS feed [mcdonald]
- Added: button bar icons [mcdonald]

- Replaced: $HTTP_POST_VARS with $_POST [gibaphp]
- Replaced: $HTTP_GET_VARS  with $_GET [gibaphp]

- Fixed: indication active tab in admin menu [mcdonald]
- Fixed: multilanguage issue menu content in block settings [mcdonald]
- Fixed: category menu for modifying term [mcdonald]
- Fixed: captcha compatibility between icms 1.1 and icms 1.1.1+ [mcdonald]
- Fixed: mysql error in modules admin when imglossary not installed [gibaphp]
- Fixed: undefined variable random when no entries [mcdonald]
- Fixed: RSS feed template array no. [mcdonald]

